--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/placement
+MONGO_URI=mongodb+srv://souvik2812:souvik2812@cluster0.35euhn2.mongodb.net/?appName=Cluster0
 JWT_SECRET=supersecretkey123
 CLIENT_URL=http://localhost:5173
